--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>test_web_page</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $("p").click(function(){
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+    <script>
+        $(document).on("pagecreate","#pageone",function(){
+            $("p").on("tap",function(){
                 $(this).hide();
             });
         });
@@ -14,6 +18,20 @@
 </head>
 <body>
 
-        <p>If you click on me, I will disappear.</p>
+<div data-role="page" id="pageone">
+    <div data-role="header">
+        <h1>tap 事件</h1>
+    </div>
+    ​
+    <div data-role="main" class="ui-content">
+        <p>敲击我，我会消失。</p>
+        <p>敲击我，我会消失。</p>
+        <p>敲击我，我也会消失。</p>
+    </div>
+    ​
+    <div data-role="footer">
+        <h1>页脚文本</h1>
+    </div>
+</div>
 </body>
 </html>
